TopMenu electron drag, prevent resizing, overflow

--- a/electron-calendar/src/app/app.component.sass
+++ b/electron-calendar/src/app/app.component.sass
@@ -1,15 +1,17 @@
 my-app
   display: flex
-  border: solid black 2px
+  //border: solid black 2px
   width: 90em
   min-height: 50em
   div
     box-sizing: border-box
+  overflow: hidden
 side-menu
   margin-top: 2em
   flex-grow: 1
 top-menu
   height: 2em
+  -webkit-app-region: drag
 .pane1
   display: flex
   flex-direction: column
